--- a/CVymai.html
+++ b/CVymai.html
@@ -332,7 +332,7 @@ ul {
 	<p class=MList1>&#9632;  Investigated topics about smoking policies and tobacco use</p>
 	<p class=MList1>&#9632;  Helped on grant proposals about smoking policies and tobacco use in the U.S.</p>
 	<p class=MList1>&#9632;  Mentored students on public health research and conference presentation</p>
-	<p class=MList1>&#9632;  Offered biostatistics consulting service</p>
+	<p class=MList1>&#9632;  Offered biostatistic consulting service</p>
 	</div>
 </div>
 <div class=MH3>
@@ -362,9 +362,8 @@ ul {
 <div class=MH3>
 	<div class=MH3L><span class=MH3Char>Senior Researcher/Data Analyst (SQL server)</span></div>
 	<div class=MH3R><span>&nbsp;&nbsp;2008 - 2012</span></div>
-	<div class=adm><p class=MH4>Zhenai.com, Shenzhen, CHINA</p></div>
 	<div class=adm>
-	<p class=MH4>University of Central Florida, FL, USA</p>
+	<p class=MH4>Zhenai.com, Shenzhen, CHINA</p>
 	<p class=MList1>&#9632;  Led the project to develop a psychological-personality assessment system for customers </p>
 	<p class=MList1>&#9632;  Researched human dating behaviors and marriage (couple) compatibility</p>
 	<p class=MList1>&#9632;  Improved strategy for customer-relation management using data mining (SPSS and SQL server)</p>
