--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
       <div style='display:inline-block;width=100%; height=100%'>
         <h2 style="font-family: Tahoma, sans-serif;">Biography<h2>
         <div style='text-align:left;'>
-        <p>Yujiao Mai, Ph.D. in Quantitative Psychology and B.S. in Computer Science, has ten years of experience in data analysis, advancing statistical methods, and developing statistical computing tools. 
-		Since 2008, Yujiao has been collaborating with top scientists in Psychology, Public Health, and Cancer Survivorship research. 
-		She specializes in structural equation modeling and works hard to support research in health sciences. 
-		She excels in programming using R, SAS, SQL, Mplus, SPSS, C++, and Python. 
-		Throughout these years, Yujiao has contributed over ten publications of novel methods and applied studies, three R packages, one SAS macro, and two websites.
-		She is currently serving as a Board Member of the International Society for Data Science and Analytics (ISDSA), a Guest Editor of the Journal of Behavioral Data Science, 
-		and a Reviewer for top journals such as Structural Equation Modeling: A Multidisciplinary Journal.
-		When she is not at work, Yujiao can be found in the great mountains.</p>
+        <p>Yujiao Mai, Ph.D. in Quantitative Psychology and B.S. in Computer Science, specializes in structural equation modeling and excels in programming using R, SAS, SQL, Mplus, SPSS, C++, and Python.
+		Since 2008, Yujiao has been analyzing data, advancing statistical methods, developing computing tools, and supporting research in Psychology, Public Health, and Cancer. 
+		She has contributed over ten novel methods and applied studies, three R packages, one SAS macro, and two websites.
+		In addition, she serves as a Board Member of the International Society for Data Science and Analytics (ISDSA), a Guest Editor of the Journal of Behavioral Data Science, 
+		and a Reviewer for top journals such as Structural Equation Modeling: A Multidisciplinary Journal. 
+		When she is not at work, Yujiao can be found in the great mountains.		
+		</p>
+		<p>Yujiao is currently seeking a new position to support research to find cancer cures. </p>
         </div>
       
       </div>   
