--- a/CVymai.html
+++ b/CVymai.html
@@ -332,7 +332,7 @@ ul {
 	<p class=MList1>&#9632;  Investigated topics about smoking policies and tobacco use</p>
 	<p class=MList1>&#9632;  Helped on grant proposals about smoking policies and tobacco use in the U.S.</p>
 	<p class=MList1>&#9632;  Mentored students on public health research and conference presentation</p>
-	<p class=MList1>&#9632;  Offered biostatistic consulting service</p>
+	<p class=MList1>&#9632;  Offered biostatistics consulting service</p>
 	</div>
 </div>
 <div class=MH3>
