--- a/CVymai.html
+++ b/CVymai.html
@@ -557,7 +557,7 @@ structural equation modeling in psychological research'. 2012-2014</p>
 <p class=MList1>&#9632;  American Statistical Association (ASA), 2017-present</p>
 <p class=MList1>&#9632;  American Association for Cancer Research (AACR), 2020-present</p>
 <p class=MList1>&#9632;  International Society for Data Science and Analytics (ISDSA), 2021-present</p>
-<p class=MList1>&#9632;  Association for Psychological Science (APS), 2015-2016</p>
+<p class=MList1>&#9632;  Association for Psychological Science (APS), 2015-2016, 2021-present</p>
 
 <div class=MH2>SERVISES</div>
 
