--- a/CVymai.html
+++ b/CVymai.html
@@ -280,8 +280,8 @@ ul {
 	<div class=MH1L><p class=MH1>Yujiao Mai</p></div>
 	<div class=MH1R>
 	<p class=MH5>Web: <a href="https://yujiaomai.github.io/">https://yujiaomai.github.io/</a></p>
-	<p class=MH5>Email: yujiaomai@gmail.com</p>
-	<p class=MH5>Address: Memphis, TN 38120, USA</p>
+	<p class=MH5>Email: yujiaomai@outlook.com</p>
+	<p class=MH5>Address: Shenzhen, China</p>
 	</div>
 </div>
 <div class=adm>
