--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2 style='text-align:left;font-family: Tahoma, sans-serif;'>&#9839; Contact <h2>
         <div style='text-align:left;'>
         <item style='font-size:20px'>       
-        <ul>Email: yujiaomai@gmail.com</ul> 
+        <ul>Email: yujiaomai@outlook.com</ul> 
         <ul><a href='https://github.com/YujiaoMai'>Github</a>/<a href='https://www.researchgate.net/profile/Yujiao_Mai'>ResearchGate</a>/<a href='https://scholar.google.com/citations?user=Wa8OVv0AAAAJ&hl=en'>GoogleScholar</a></ul>     
         <ul><a href='https://orcid.org/0000-0001-7529-6369'>ORCID: 0000-0001-7529-6369</a></ul>           
         </item>
@@ -81,10 +81,9 @@
 		Since 2008, Yujiao has been analyzing data, advancing statistical methods, developing computing tools, and supporting research in Psychology, Public Health, and Cancer. 
 		She has contributed over ten novel methods and applied studies, three R packages, one SAS macro, and two websites.
 		In addition, she serves as a Board Member of the International Society for Data Science and Analytics (ISDSA), a Guest Editor of the Journal of Behavioral Data Science, 
-		and a Reviewer for top journals such as Structural Equation Modeling: A Multidisciplinary Journal. 
-		When she is not at work, Yujiao can be found in the great mountains.		
+		and a Reviewer for top journals such as Structural Equation Modeling: A Multidisciplinary Journal.		
 		</p>
-		<p>Yujiao is currently seeking a new position to support research to find cancer cures. </p>
+		<p>Yujiao is currently seeking a new position to support research to find cures. </p>
         </div>
       
       </div>   
