--- a/CVymai.html
+++ b/CVymai.html
@@ -287,11 +287,11 @@ ul {
 <div class=adm>
 <div class=MH2>SUMMARY</div>
 <div  class=MsNormal>
-<p class=MList1>&#9883; Ten-year experience in data analysis, advancing statistical methods, and developing statistical computing tools</p>
-<p class=MList1>&#9883; Ten-year practicing of collaborative research in Psychology, Public Health, and Cancer</p>
-<p class=MList1>&#9883; Specialize in structural equation modeling, mediation effect, and mixed effect analysis</p>
-<p class=MList1>&#9883; Excel in programming using R, SAS, SPSS, SQL, Mplus, PHP, JavaScript, C++, and Python</p>
-<p class=MList1>&#9883; Familiar with Linux high-performance computing and a quick learner of computing techniques</p>
+<p class=MList1>&#9883; Ten-year experience in data analysis, applied statistics, and developing statistical tools</p>
+<p class=MList1>&#9883; Ten-year practicing of collaborative research in Psychology, Public Health, and Medicine</p>
+<p class=MList1>&#9883; Excel in programming using R, SAS, SPSS, SQL, Mplus, and Python</p>
+<p class=MList1>&#9883; Proficiencies in reviewing innovative statistical methods and applying new tools</p>
+<p class=MList1>&#9883; Demonstrated capability in scientific publication and presentation</p>
 </div>
 
 <div class=MH2>EDUCATIONS</div>
@@ -364,21 +364,24 @@ ul {
 	<div class=MH3R><span>&nbsp;&nbsp;2008 - 2012</span></div>
 	<div class=adm>
 	<p class=MH4>Zhenai.com, Shenzhen, CHINA</p>
+	<p class=MList1>&#9632;  Improved strategy for customer-relation management using data mining (SPSS and SQL server)</p>
+	<p class=MList1>&#9632;  Built the statistical dashboards to monitor online user behaviors and business growth</p>	
 	<p class=MList1>&#9632;  Led the project to develop a psychological-personality assessment system for customers </p>
 	<p class=MList1>&#9632;  Researched human dating behaviors and marriage (couple) compatibility</p>
-	<p class=MList1>&#9632;  Improved strategy for customer-relation management using data mining (SPSS and SQL server)</p>
-	<p class=MList1>&#9632;  Built the statistical dashboards to monitor online user behaviors and business growth</p>
 	<p class=MList1>&#9632;  Edited a handbook of mating psychology for customer service and trained the representatives</p>
 	</div>
 </div>
 
 <div class=MH2>PUBLICATIONS</div>
 <p class=MH3><span class=MH3Char>PEER REVIEWED:</span></p>
-
-<p class=MList2>Mai, Y., &amp; Zhang, H. (in press). Classic linear mediation
+<p class=MList2>Porter, J.S., Paladino, A.J., Russell, k., Rupff, R., Griffith,
+J., Mai, Y., Zhang, H., Hankins, J.S., &amp; Wang, W.C. (2021).
+Nocturnal enuresis in sickle cell: Sociodemographic, medical, and quality of
+life factors. Journal of Pediatric Psychology, Aug 25, jsab079.</p>
+<p class=MList2>Mai, Y., &amp; Zhang, H. (2021). Classic linear mediation
 analysis of complex survey data using balanced repeated replication. In: Zhao,
-Y. &amp; Chen, D. (eds), Modern Statistical Methods for Health Research. New
-York, NY: Springer.</p>
+Y. &amp; Chen, D. (eds), Modern Statistical Methods for Health Research (pp. 189-204). 
+Emerging Topics in Statistics and Biostatistics. New York, NY: Springer, Cham. </p>
 <p class=MList2>Zheng, J., An, X., Qian, J. Y., Mai, Y., Xu, Z., &amp; Xu, T.
 (2020). Research letter: ED90 of phenylephrine prophylactic bolus dose to
 prevent maternal hypotension during cesarean delivery.&nbsp;Journal of Clinical
@@ -433,10 +436,7 @@ academic adjustment. Psychological Development and Education, 24(1), 60-65.</p>
 
 <p class=MH3><span class=MH3Char>UNDER REVIEW</span>:</p>
 
-<p class=MList2>Porter, J.S., Paladino, A.J., Russell, k., Rupff, R., Griffith,
-J., Mai, Y., Zhang, H., Hankins, J.S., &amp; Wang, W.C. (Under review).
-Nocturnal enuresis in sickle cell: Sociodemographic, medical, and quality of
-life factors. Journal of Pediatric Psychology.</p>
+<p></p>
 
 <p class=MH3><span class=MH3Char>NON-PEER REVIEWED</span>:</p>
 
