--- a/index.html
+++ b/index.html
@@ -77,11 +77,9 @@
       <div style='display:inline-block;width=100%; height=100%'>
         <h2 style="font-family: Tahoma, sans-serif;">Biography<h2>
         <div style='text-align:left;'>
-        <p>Yujiao Mai, Ph.D. in Quantitative Psychology and B.S. in Computer Science, specializes in structural equation modeling and excels in programming using R, SAS, SQL, Mplus, SPSS, C++, and Python.
-		Since 2008, Yujiao has been analyzing data, advancing statistical methods, developing computing tools, and supporting research in Psychology, Public Health, and Cancer. 
-		She has contributed over ten novel methods and applied studies, three R packages, one SAS macro, and two websites.
-		In addition, she serves as a Board Member of the International Society for Data Science and Analytics (ISDSA), a Guest Editor of the Journal of Behavioral Data Science, 
-		and a Reviewer for top journals such as Structural Equation Modeling: A Multidisciplinary Journal.		
+        <p>Yujiao Mai has ten years of experience in analyzing data, advancing statistical methods, and developing statistical software packages. Since 2008, Yujiao has been collaborating with top scientists to improve health knowledge and health care services, especially for youth and cancer survivors. Yujiao received her Bachelor's degree in computer science and technology and Ph.D. in quantitative psychology. She masters applied statistics and excels in SAS, R, SPSS, Mplus, SQL, and Python. 
+		</p>
+		<p>Throughout these years, Yujiao has contributed over 20 publications of novel methods and application studies, three R packages and one SAS macro, and numerous presentations at international conferences. She is currently serving as a Board Member of the International Society for Data Science and Analytics (ISDSA), a Guest Editor of the Journal of Behavioral Data Science, and a Reviewer for journals such as Structural Equation Modeling: A Multidisciplinary Journal. 
 		</p>
 		<p>Yujiao is currently seeking a new position to support research to find cures. </p>
         </div>
@@ -97,8 +95,12 @@
   <h1 style="font-family: Tahoma, sans-serif;">&#9883; Selected Publications &#9883;</h1>
     <div class="container text-center">
       <div style="width:95%;text-align:left;font-size:20px;">
-        <li>Mai, Y., Ha, T., &amp; Soulakova, J. N. (2019). Multimediation method with balanced repeated replications for analysis of complex surveys. Structural Equation Modeling: A Multidisciplinary Journal, 26 (5), 678-684.<br>
-			<a href='https://www.tandfonline.com/doi/full/10.1080/10705511.2018.1559065'>Paper</a></ul>
+	  
+	  
+		<li>Porter, J.S., Paladino, A.J., Russell, k., Rupff, R., Griffith, J., Mai, Y., Zhang, H., Hankins, J.S., & Wang, W.C. (2021). Nocturnal enuresis in sickle cell: Sociodemographic, medical, and quality of life factors. Journal of Pediatric Psychology, Aug 25, jsab079. 
+		<br> <a href='https://doi.org/10.1093/jpepsy/jsab079'>Paper</a></ul>
+        <li>Mai, Y., & Zhang, H. (2021). Classic linear mediation analysis of complex survey data using balanced repeated replication. In: Zhao, Y. & Chen, DG. (eds), Modern Statistical Methods for Health Research (pp. 189-204). Emerging Topics in Statistics and Biostatistics. New York, NY: Springer, Cham.
+		<br> <a href='https://doi.org/10.1007/978-3-030-72437-5_9'>Paper</a></ul>
          <li>Mai, Y., Ha, T., &amp; Soulakova, J. N. (2019). Workplace smoking restrictions and support for smoking cessation in the USA: state, region, and overall trends from 2010–11 to 2014–15. Journal of Smoking Cessation, 1-10.
 			<br><a href='https://www.cambridge.org/core/journals/journal-of-smoking-cessation/article/workplace-smoking-restrictions-and-support-for-smoking-cessation-in-the-usa-state-region-and-overall-trends-from-201011-to-201415/C9463973E0FB5DC1D6A57D137DF7D20B'>Paper</a></ul>
         <li>Mai, Y., Zhang, Z., &amp; Wen, Z. (2018). Comparing exploratory structural equation modeling and existing approaches for multiple regression with latent variables. Structural Equation Modeling: A Multidisciplinary Journal, 25(5), 737-749.
