--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
       <div style='display:inline-block;width=100%; height=100%'>
         <h2 style="font-family: Tahoma, sans-serif;">Biography<h2>
         <div style='text-align:left;'>
-        <p>Yujiao Mai has ten years of experience in analyzing data, advancing statistical methods, and developing statistical software packages. Since 2008, Yujiao has been collaborating with top scientists to improve health knowledge and health care services, especially for youth and cancer survivors. Yujiao received her Bachelor's degree in computer science and technology and Ph.D. in quantitative psychology. She masters applied statistics and excels in SAS, R, SPSS, Mplus, SQL, and Python. 
+        <p>Yujiao Mai has professional experience in analyzing data and developing statistical tools (R, SAS, and SQL). Since 2008, Yujiao has been collaborating with top scientists to improve health knowledge and health care services, especially for youth and cancer survivors. Yujiao received her Bachelor's degree in computer science and technology and Ph.D. in quantitative psychology. 
 		</p>
-		<p>Throughout these years, Yujiao has contributed over 20 publications of novel methods and application studies, three R packages and one SAS macro, and numerous presentations at international conferences. She is currently serving as a Board Member of the International Society for Data Science and Analytics (ISDSA), a Guest Editor of the Journal of Behavioral Data Science, and a Reviewer for journals such as Structural Equation Modeling: A Multidisciplinary Journal. 
+		<p>Throughout these years, Yujiao has contributed over 20 publications of scientific studies, three R packages and one SAS macro, and numerous presentations at international conferences.
 		</p>
-		<p>Yujiao is currently seeking a new position to support research to find cures. </p>
+		<p>Yujiao is currently seeking a new position to support research to find cancer cures. </p>
         </div>
       
       </div>   
@@ -216,7 +216,7 @@
 </div><br>
 
 <footer class="container-fluid text-center" style='background:lightgray;'>
-  <p>Copyright&copy Yujiao Mai 2020-2021</p>
+  <p>Copyright&copy Yujiao Mai 2020-2022</p>
   <p>Webpage Template is from w3schools.com</p>
 </footer>
 
