--- a/CVymai.html
+++ b/CVymai.html
@@ -281,17 +281,16 @@ ul {
 	<div class=MH1R>
 	<p class=MH5>Web: <a href="https://yujiaomai.github.io/">https://yujiaomai.github.io/</a></p>
 	<p class=MH5>Email: yujiaomai@outlook.com</p>
-	<p class=MH5>Address: Shenzhen, China</p>
+
 	</div>
 </div>
 <div class=adm>
 <div class=MH2>SUMMARY</div>
 <div  class=MsNormal>
-<p class=MList1>&#9883; Ten-year experience in data analysis, applied statistics, and developing statistical tools</p>
-<p class=MList1>&#9883; Ten-year practicing of collaborative research in Psychology, Public Health, and Medicine</p>
-<p class=MList1>&#9883; Excel in programming using R, SAS, SPSS, SQL, Mplus, and Python</p>
-<p class=MList1>&#9883; Proficiencies in reviewing innovative statistical methods and applying new tools</p>
-<p class=MList1>&#9883; Demonstrated capability in scientific publication and presentation</p>
+<p class=MList1>&#9883; Professional experience in data analysis and developing statistical tools (R and SAS): General linear regression, mixed-effects, Cox models, bootstrap, and simulation</p>
+<p class=MList1>&#9883; Experiences of statistical consulting and collaborative research in Public Health and Medicine</p>
+<p class=MList1>&#9883; Demonstrated capability in preparing manuscript and conference presentationn</p>
+<p class=MList1>&#9883; Background in database design and management using SQL/MySQL</p>
 </div>
 
 <div class=MH2>EDUCATIONS</div>
@@ -594,7 +593,7 @@ Workshop on Biostatistics and bioinformatics 2019 May, Atlanta, GA</p>
   </div>
 </div>
 <footer class="container-fluid text-center">
-  <p>Copyright&copy Yujiao Mai 2020-2021</p>
+  <p>Copyright&copy Yujiao Mai 2020-2022</p>
   <p>Webpage Template are from w3schools.com</p>
 </footer>
 
