--- a/CVymai.html
+++ b/CVymai.html
@@ -287,8 +287,8 @@ ul {
 <div class=adm>
 <div class=MH2>SUMMARY</div>
 <div  class=MsNormal>
-<p class=MList1>&#9883; Professional experience in data analysis and developing statistical tools (R and SAS): General linear regression, mixed-effects, Cox models, bootstrap, and simulation</p>
-<p class=MList1>&#9883; Experiences of statistical consulting and collaborative research in Public Health and Medicine</p>
+<p class=MList1>&#9883; Professional experience in data analysis and developing statistical tools (R and SAS): General linear models, mixed-effects, Cox models, bootstrap, and simulation</p>
+<p class=MList1>&#9883; Experience of statistical consulting and collaborative research in Public Health and Medicine</p>
 <p class=MList1>&#9883; Demonstrated capability in preparing manuscript and conference presentationn</p>
 <p class=MList1>&#9883; Background in database design and management using SQL/MySQL</p>
 </div>
