--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
       <div style='display:inline-block;width=100%; height=100%'>
         <h2 style="font-family: Tahoma, sans-serif;">Biography<h2>
         <div style='text-align:left;'>
-        <p>Yujiao Mai has professional experience in analyzing data and developing statistical tools (R, SAS, and SQL). Since 2008, Yujiao has been collaborating with top scientists to improve health knowledge and health care services, especially for youth and cancer survivors. Yujiao received her Bachelor's degree in computer science and technology and Ph.D. in quantitative psychology. 
+ 	<p>Yujiao Mai has professional experience analyzing data and developing statistical tools (R, SAS, and SQL). Since 2008, Yujiao has collaborated with top scientists to improve health knowledge and health care services, especially for youth, minorities, and cancer survivors. Yujiao received her Bachelor's degree in computer science and technology and Ph.D. in quantitative psychology. 
 		</p>
-		<p>Throughout these years, Yujiao has contributed over 20 publications of scientific studies, three R packages and one SAS macro, and numerous presentations at international conferences.
+		<p>Throughout these years, the collaboration projects have led to over 20 publications of scientific papers/book chapters, software packages (e.g., R packages,SAS macro, and web applications), and international conference abstracts.
 		</p>
-		<p>Yujiao is currently seeking a new position to support research to find cancer cures. </p>
+		<p>Yujiao is currently seeking a new position to support research to advance health sciences and health care services. </p>
         </div>
       
       </div>   
